# booking_app

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  delete-images-before.sh  docker-compose-ci.yml  docker-compose.yml  index.html  main.py  nginx.conf  pyproject.toml  pytest.ini
helpers/: docs.py  examples.py
schemas/: hotels.py
src/: bootstrap.py  config.py  db.py  hotels.py  main.py
src/api/: additionals.py  auth.py  bookings.py  dependencies.py  hotels.py  images.py  rooms.py
src/connectors/: redis_manager.py
src/dependencies/: auth.py  db.py  hotels.py  rooms.py
src/helpers/: additionals.py  auth.py  bookings.py  examples.py  exceptions.py  hotels.py  middlewares.py  rooms.py
src/migrations/: env.py
src/migrations/versions/: 2025_06_12_2040-9cc0c1735be8_added_hotels.py  2025_06_12_2041-bb5818568d87_added_rooms.py  2025_06_14_1138-0514c8fa3815_added_users.py  2025_06_14_1245-4b15caf4e7cf_added_some_extra_fields_and_constraints.py  2025_06_14_1818-a0b02917e75f_added_extra_fields.py  2025_06_17_1216-9c3368557339_added_bookings_model.py  2025_06_17_1630-e11758781b0f_added_created_at_field_to_bookingsorm_.py  2025_06_18_1216-d876bc95ec32_added_additionals_and_many_to_many_.py  2025_06_18_1230-d233d034600a_added_desc_to_additionals.py  2025_07_13_1213-5176364dea3c_added_unique_constrain_for_additionals.py  2025_07_15_1253-b07259507a12_added_unique_constraints_for_hotels_and_.py  2025_07_15_1502-cc5ac0bc9202_make_user_fields_optional.py  ccc9f1c77908_initial_migration.py  ccfa03bf6577_rooms_migration.py
src/models/: __init__.py  additionals.py  bookings.py  hotels.py  rooms.py  users.py
src/repos/: additionals.py  auth.py  base.py  bookings.py  hotels.py  rooms.py  utils.py
src/repos/mappers/: base.py  mappers.py
src/schemas/: additionals.py  auth.py  base.py  bookings.py  hotels.py  rooms.py
src/services/: additionals.py  auth.py  base.py  bookings.py  hotels.py  images.py  rooms.py
src/tasks/: app.py  tasks.py
src/utils/: db_manager.py  exceptions.py  file_manager.py  helpers.py  redis_cache.py
tests/: conftest.py
tests/end_to_end/auth/: test_api.py
tests/integration_tests/: test_auth.py
tests/integration_tests/additionals/: test_api.py
tests/integration_tests/bookings/: test_api.py  test_db.py
tests/integration_tests/hotels/: test_api.py  test_db.py
tests/integration_tests/rooms/: test_api.py
tests/unit_tests.py/: test_auth.py
tests/unit_tests/rooms/: test_api.py
