[project]
name = "booking_app"
version = "0.1.0"
description = ""
authors = [
    {name = "vavlxxx",email = "vladimir.nefedov357@gmail.com"}
]
readme = "README.md"
requires-python = "~=3.11.9"
dependencies = [
    "uvicorn (>=0.34.3,<0.35.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "asyncpg (==0.29.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "bcrypt (==4.0.1)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "fastapi-cache2 (>=0.2.2,<0.3.0)",
    "celery (>=5.5.3,<6.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "pytest-dotenv (>=0.5.2,<0.6.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.12.2,<0.13.0)",
    "pyright (>=1.1.403,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.pyright]
include = ["src"]
exclude = ["venv"]
pythonVersion = "3.11.9"
typeCheckingMode = "basic"
reportOptionalMemberAccess="none"
reportArgumentType="none"
